--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -17,8 +17,17 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
-        "# Assignment 1: Python basics review\n",
+        "<a href=\"https://colab.research.google.com/github/NYU-Intro-Experimental-Physics-II-Spr24/Assignment0/blob/main/Assignment0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+      "cell_type": "markdown",
+      "source": [
+        "# Assignment1: Python basics review\n",
         "This lab will review the key concepts from Pine Chapters 1-6 and continue introducing you the the Colab interface. Many of the code snippets you develop here will be useful in later labs and homework assignments."
       ],
       "metadata": {
