--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -29,7 +29,8 @@
       "cell_type": "markdown",
       "source": [
         "# Assignment1: Python basics review\n",
-        "This lab will review the key concepts from Pine Chapters 1-6 and continue introducing you the the Colab interface. Many of the code snippets you develop here will be useful in later labs and homework assignments."
+        "This lab will review the key concepts from Pine Chapters 1-6 and continue introducing you the the Colab interface. Many of the code snippets you develop here will be useful in later labs and homework assignments.\n",
+        "If you haven't already done so, you should use [this link](https://classroom.github.com/a/SAgUWm8k) to officially accept this assignment."  
       ],
       "metadata": {
         "id": "prE0VhgsJDqk"
