--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "# Assignment1: Python basics review\n",
         "This lab will review the key concepts from Pine Chapters 1-6 and continue introducing you the the Colab interface. Many of the code snippets you develop here will be useful in later labs and homework assignments.\n",
-        "If you haven't already done so, you should use [this link](https://classroom.github.com/a/SAgUWm8k) to officially accept this assignment."  
+        "If you haven't already done so, you should use [this link](https://classroom.github.com/a/AfqMQJGp) to officially accept this assignment."  
       ],
       "metadata": {
         "id": "prE0VhgsJDqk"
