--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -29,6 +29,7 @@
       "cell_type": "markdown",
       "source": [
         "# Assignment1: Python basics review\n",
+        "Assignment1 is due by the end of your first lab session (either 1/22 or 1/23).\n",
         "This lab will review the key concepts from Pine Chapters 1-6 and continue introducing you the the Colab interface. Many of the code snippets you develop here will be useful in later labs and homework assignments.\n",
         "If you haven't already done so, you should use [this link](https://classroom.github.com/a/AfqMQJGp) to officially accept this assignment."  
       ],
